--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="/js/cloak.js"></script>
 
     <!-- Set the title bar of the page -->
-    <title>Retro Bowl</title>
+    <title>Google</title>
 
     <!-- Set the background colour of the document -->
     <style>
