--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta charset="utf-8" />
-    <script src="/js/cloak.js"></script>
 
     <!-- Set the title bar of the page -->
-    <title>Google</title>
+    <title>Retro Bowl</title>
 
     <!-- Set the background colour of the document -->
     <style>
