--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
     </div>
 
     <!-- Run the game code -->
-    <script type="1993afbbacc1a02126d24fae-text/javascript" src="html5game/RetroBowl.js"></script>
+    <script> src="/html5game/RetroBowl.js" </script>
     <!-- Poki start -->
-    <script src="/sdk/poki-sdk.js" type="1993afbbacc1a02126d24fae-text/javascript"></script>
-    <script type="1993afbbacc1a02126d24fae-text/javascript">(function () {
+    <script> src="/sdk/poki-sdk.js" </script>
+    <script> type="1993afbbacc1a02126d24fae-text/javascript">(function () {
             function fin(ok) {
                 window.PokiSDK_OK = ok;
                 GameMaker_Init();
@@ -432,7 +432,7 @@
                     window.PokiSDK = null;
                     fin(false);
                 }
-                PokiSDK.setDebug(true); <-- Uncomment this line for debugging
+                //PokiSDK.setDebug(true); <-- Uncomment this line for debugging
             });
         })();
     </script>
