--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </style>
 
   <!-- InMobi Choice. Consent Manager Tag v3.0 (for TCF 2.2) -->
-  <script type="1993afbbacc1a02126d24fae-text/javascript" async=true>
+  <script>
   (function() {
     var host = window.location.hostname;
     var element = document.createElement('script');
@@ -415,7 +415,7 @@
     <script> src="/html5game/RetroBowl.js" </script>
     <!-- Poki start -->
     <script> src="/sdk/poki-sdk.js" </script>
-    <script> type="1993afbbacc1a02126d24fae-text/javascript">(function () {
+    <script> (function () {
             function fin(ok) {
                 window.PokiSDK_OK = ok;
                 GameMaker_Init();
