--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </style>
 
   <!-- InMobi Choice. Consent Manager Tag v3.0 (for TCF 2.2) -->
-  <script>
+  <script type="7e41919c590e8237e4883128-text/javascript" async=true>
   (function() {
     var host = window.location.hostname;
     var element = document.createElement('script');
@@ -412,10 +412,10 @@
     </div>
 
     <!-- Run the game code -->
-    <script> src="/html5game/RetroBowl.js" </script>
+    <script type="7e41919c590e8237e4883128-text/javascript" src="html5game/RetroBowl.js?ILABC=1551937871"></script>
     <!-- Poki start -->
-    <script> src="/sdk/poki-sdk.js" </script>
-    <script> (function () {
+    <script src="/sdk/poki-sdk.js" type="7e41919c590e8237e4883128-text/javascript"></script>
+    <script type="7e41919c590e8237e4883128-text/javascript">(function () {
             function fin(ok) {
                 window.PokiSDK_OK = ok;
                 GameMaker_Init();
@@ -437,7 +437,7 @@
         })();
     </script>
     <!-- Poki end -->
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="1993afbbacc1a02126d24fae-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9158573d98e3209d","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.1.0","token":"5aec41874ddc4d02ae9983ec60ecbae6"}' crossorigin="anonymous"></script>
+<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="7e41919c590e8237e4883128-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"91598bd03d14dd94","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.1.0","token":"5aec41874ddc4d02ae9983ec60ecbae6"}' crossorigin="anonymous"></script>
 </body>
 
 </html>
