--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Set the background colour of the document -->
     <style>
+        
         body {
             background: #0;
             color: #cccccc;
@@ -73,7 +74,7 @@
             height: 100%;
         }
     </style>
-
+<body style="background-color:black;">
   <!-- InMobi Choice. Consent Manager Tag v3.0 (for TCF 2.2) -->
   <script type="7e41919c590e8237e4883128-text/javascript" async=true>
   (function() {
